# revdep-scanner

./: CHANGELOG.md  README.md  cabal.project  revdep-scanner  revdep-scanner.cabal
.github/workflows/: haskell.yml
lib/: RevdepScanner.hs
src-exe/: Main.hs
