cabal-version:      3.4
name:               revdep-scanner
version:            0.1.0.0
synopsis:           Scan Gentoo repositories for reverse dependencies

tested-with:        GHC == { 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.1 }
-- description:
homepage:           https://github.com/gentoo-haskell/revdep-scanner
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Gentoo Authors
maintainer:         hololeap@protonmail.com
copyright:          Copyright (C) 2025 Gentoo Authors
category:           Development
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md
-- extra-source-files:

source-repository head
    type:           git
    location:       https://github.com/gentoo-haskell/cabal-portage.git
    branch:         main
    subdir:         portage-hs

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common warnings
    ghc-options: -Wall
    if flag(pedantic)
        ghc-options:    -Werror

common exe
    ghc-options: -threaded -rts-options=-N

executable revdep-scanner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base >=4.16 && <4.22
        , parsable ^>=0.1
        , portage-hs ^>=0.1
        , bytestring >=0.11.4.0 && <0.13
        , conduit-extra >=1.1.12 && <1.4
        , conduit ^>=1.3.0
        , directory ^>=1.3.6.2
        , mtl >=2.2.2 && <2.4
        , parsec ^>=3.1
        , pretty-simple ^>=4.1.1.0
        , process ^>=1.6.16
        , unordered-containers ^>=0.2
        , text >=1.2.5.0 && <2.2
        , transformers >=0.5.6.2 && <0.7
    hs-source-dirs:   src-exe
    default-language: GHC2021
